frame/support/test/tests/decl_module_ui/reserved_keyword_two_times_integrity_test.rs
frame_support::decl_module! {
	pub struct Module<T: Trait> for enum Call where origin: T::Origin {
		fn integrity_test() {}

		fn integrity_test() {}
	}
}
